--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.1.1 (Unreleased)
+------------------
+
+* fixed disabling columns on Plone 4 [keul]
+
 0.1.0 (2012-01-11)
 ------------------
 
