--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.2.0 (2012-01-20)
+------------------
+
+* a view section were duplicated [keul]
+* the token view can now also reject the content [keul]
+
 0.1.1 (2012-01-15)
 ------------------
 
