--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.3.1 (2012-02-15)
+------------------
+
+* bad dependency of last version fixed
+
 0.3.0 (2012-02-15)
 ------------------
 
